--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,8 @@
 RewriteEngine on
+
+RewriteRule ^/?(\d[.0-9]*)/([a-zA-Z]+)(\.webp)?$ data/$1/$2.webp [L]
+
+RewriteCond %{DOCUMENT_ROOT}/maps/data/$1/$2.svg -f
+RewriteRule ^/?(\d[.0-9]*)/([a-zA-Z]+)\.svg$ data/$1/$2.svg [L]
+
 RewriteRule ^/?(\d[.0-9]*)/([a-zA-Z]+)\.svg$ get.php?version=$1&name=$2 [L]
